welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: expected class or object definition
def lireCol1(){
^